Fixed spacing and added borders to index.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     width: 100%;
     height: 80px;
     margin-bottom: 30px;
+    border-bottom: 2px #cccccc solid;
 }
 
 header {
@@ -33,8 +34,10 @@ h2 {
 }
 #nav {
     float: right;
-    padding: 30px 30px 0px 0px;
-    font-family: 'Georgia', Times, Times New Roman, serif;
+    padding: 30px 0px 0px 0px;
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    color: #cccccc;
 }
 
 #footer {
@@ -42,6 +45,7 @@ h2 {
     width: 100%;
     height: 80px;
     text-align: center;
+    border-top: 5px #4aaaa5 solid;
     position: absolute;
     left: 0;
     bottom: 0;
@@ -61,22 +65,40 @@ footer {
     color: #777777;
     line-height: 21px;
     padding: 20px 30px;
+    border: 0.5px #cccccc solid;
 }
 
 #content p {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 h3 {
     font-family: 'Georgia', Times, Times New Roman, serif;
     font-size: 24px;
     font-weight: bolder;
-    padding-bottom: 20px;
+    padding-bottom: 30px;
     color: #4aaaa5;
+    border-bottom: 2px #cccccc solid;
+    margin-bottom: 30px;
 }
 
 #ProfilePic {
     float:left;
     width: 150px;
     margin: 0px 15px 5px 0px;
+}
+
+a:link, a:visited {
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    font-size: 14px;
+    color: #777777;
+    text-decoration: none;
+}
+
+a:hover {
+    color:  #4aaaa5;
+}
+
+.navlink {
+    margin: 0px 5px;
 }
